# Things-Sync

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: demo.py  demo2.py  demo2_cleanup.py  demo_cleanup.py
src/things_sync/: __init__.py  _cloud.py  _db.py  _log.py  _mirror.py  _osascript.py  _scripts.py  appintents.py  cli.py  cloud.py  db.py  models.py  shortcut.py  things.py
tests/: conftest.py  test_cloud.py  test_db.py  test_things.py
