[project]
name = "things-sync"
version = "0.2.0"
description = "Python wrapper for Things 3: SQLite-fast reads, AppleScript ops, and direct Things Cloud HTTP writes."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Isak Reinholdsson", email = "isak@isak.io" }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/things_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
