[project]
name = "things-sync"
version = "0.3.0"
description = "Python wrapper for Things 3: SQLite-fast reads, AppleScript writes."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Isak Reinholdsson", email = "isak@isak.io" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/things_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
